--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,16 +1,11 @@
-name: Greeting from Mona
+name: BZ test1
 on: push
 
 jobs:
   my-job:
-    name: My Job
+    name: send_msg
     runs-on: ubuntu-latest
     steps:
-    - name: Print a greeting
-      env:
-        MY_VAR: Hi there! My name is
-        FIRST_NAME: Mona
-        MIDDLE_NAME: The
-        LAST_NAME: Octocat
+    - name: send a dingtalk message use curl
       run: |
-        curl -G -d 'from=github_actions' -d 'content=from githubactions' http://58.247.103.86:5000/api/v1/dinggroupmsg
+        curl -G -d 'from=github_actions' -d 'content=from_githubactions' http://58.247.103.86:5000/api/v1/dinggroupmsg
