--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -7,5 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: send a dingtalk message use curl
-      run: |
-        curl -G -d 'from=github_actions' -d 'content=from_githubactions说一声您好,您辛苦了!' http://58.247.103.86:5000/api/v1/dinggroupmsg
+      run:
+        curl -G -d 'from=github_actions' -d 'content=from_githubactions说一声您好,道一声您辛苦了!' http://58.247.103.86:5000/api/v1/dinggroupmsg
